[gd_scene format=3 uid="uid://b75jjaxcr7in8"]

[ext_resource type="Script" uid="uid://b6oym5rmhgb5o" path="res://scenes/GameHUD.gd" id="1"]

[sub_resource type="Gradient" id="Gradient_green"]
offsets = PackedFloat32Array(0.85, 0.95, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_progress"]
gradient = SubResource("Gradient_green")
width = 80
height = 80
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="GameHUD" type="CanvasLayer" unique_id=376955]
layer = 10
script = ExtResource("1")

[node name="TopLeft" type="VBoxContainer" parent="." unique_id=1761929596]
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_constants/separation = 10

[node name="ProfileLabel" type="Label" parent="TopLeft" unique_id=33453419]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Profile Name"

[node name="HPBar" type="ProgressBar" parent="TopLeft" unique_id=2113469912]
custom_minimum_size = Vector2(120, 12)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="TopLeft" unique_id=1445483417]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100 / 100"

[node name="BossHealthContainer" type="VBoxContainer" parent="." unique_id=655349521]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/separation = 5

[node name="BossNameLabel" type="Label" parent="BossHealthContainer" unique_id=720956927]
layout_mode = 2
text = "BOSS NAME"
horizontal_alignment = 1

[node name="BossHPBar" type="ProgressBar" parent="BossHealthContainer" unique_id=1844416320]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
value = 100.0

[node name="TopRight" type="HBoxContainer" parent="." unique_id=652808018]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0
alignment = 2

[node name="ScoreLabel" type="Label" parent="TopRight" unique_id=725840046]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 2

[node name="BurgerButton" type="TextureButton" parent="TopRight" unique_id=1388619440]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
stretch_mode = 5

[node name="BottomRight" type="HBoxContainer" parent="." unique_id=281307503]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -120.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 2

[node name="UniqueBtnControl" type="Control" parent="BottomRight" unique_id=170582443]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomRight/UniqueBtnControl" unique_id=393459191]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CooldownBar" type="TextureProgressBar" parent="BottomRight/UniqueBtnControl" unique_id=1416323259]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 4
texture_progress = SubResource("GradientTexture2D_progress")
tint_progress = Color(0, 1, 0, 1)

[node name="Button" type="TextureButton" parent="BottomRight/UniqueBtnControl" unique_id=1385159669]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TimerLabel" type="Label" parent="BottomRight/UniqueBtnControl" unique_id=1770006982]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tag" type="Label" parent="BottomRight/UniqueBtnControl" unique_id=1192707053]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "UNI"
horizontal_alignment = 1

[node name="SpecialBtnControl" type="Control" parent="BottomRight" unique_id=273213344]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="BottomRight/SpecialBtnControl" unique_id=1917249137]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CooldownBar" type="TextureProgressBar" parent="BottomRight/SpecialBtnControl" unique_id=1918213097]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 4
texture_progress = SubResource("GradientTexture2D_progress")
tint_progress = Color(0, 1, 0, 1)

[node name="Button" type="TextureButton" parent="BottomRight/SpecialBtnControl" unique_id=32815319]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TimerLabel" type="Label" parent="BottomRight/SpecialBtnControl" unique_id=351649346]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tag" type="Label" parent="BottomRight/SpecialBtnControl" unique_id=1680553950]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "SP"
horizontal_alignment = 1

[connection signal="pressed" from="TopRight/BurgerButton" to="." method="_on_burger_pressed"]
